alignement boutons + css + correction coquille Statistics.jsp

--- a/src/main/webapp/pages/stylesheet.css
+++ b/src/main/webapp/pages/stylesheet.css
@@ -21,3 +21,11 @@ p.erreurCo {
 	font-size: 50px;
 	color: yellow;
 }
+
+.footer a:visited {
+	color: lightblue;
+}
+
+.footer a:hover {
+	color: white;
+}
